# my_xarm_lite6-extended

./: .gitignore  README.md  lite6.sh  loop_move_lite6_traj_controller.py  ros2_gui_cmds  ros2_gui_cmds.py  ros2_gui_cmds.spec  start.sh  start_FAKE.sh  start_only_dashboard.sh  start_test.sh
src/collision_check/: package.xml  setup.cfg  setup.py
src/collision_check/collision_check/: checker.py
src/motion_sequence/: package.xml  setup.cfg  setup.py
src/motion_sequence/launch/: motion_sequence_launch.py
src/motion_sequence/motion_sequence/: motion_sequence.py
src/move_to_coordinator/: package.xml  setup.cfg  setup.py
src/move_to_coordinator/move_to_coordinator/: move_to_coordinator.py
src/ros2_whisper/: README.md
src/rviz_marker/: package.xml  setup.cfg  setup.py
src/rviz_marker/rviz_marker/: marker_publisher.py
src/voice_command_listener/: package.xml  setup.cfg  setup.py
src/voice_command_listener/launch/: voice_listener.launch.py
src/voice_command_listener/voice_command_listener/: BACKUP___voice_command_listener.py  voice_command_listener.py
src/websocket/: dashboard_index.html  dashboard_script.js  dashboard_style.css  flow_design_concept.html  live_topic_tracker.py  script.js  split_html.py  test_fetch.js  workspace_analyzer.py
src/websocket/views/: cmd-colcon.html  cmd-git.html  (+16 more)
src/websocket_ui/: dashboard_index.html  dashboard_script.js  dashboard_style.css  index.html  live_topic_tracker.py  script.js  style.css  test_fetch.js  workspace_analyzer.py
src/yolo_object_detector/: homography.yaml  package.xml  setup.cfg  setup.py
(+34 files in other folders)
